--- a/templates/listings.html
+++ b/templates/listings.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+| {% block page_title %} Listings {% endblock %}
 {% block primary %}
 <!-- Main -->
 	<div id="main-wrapper">
