--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-| {% block page_title %} Home {% endblock %}
+| {% block page_title %} Search Results {% endblock %}
 {% block primary %}
 
 <!-- Main -->
