--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,33 @@
 {% block primary %}
 <!-- Banner -->
 <div id="banner-wrapper">
-	<div id="banner" class="box container">
+	<div class="container">
+		<div id="errors">
+			{% if messages %}
+              {% for message in messages %}
+                {% if 'error' in message.tags %}
+              <div id="messages" class="alert alert-danger fade in m-b-15">
+              <span class="close" data-dismiss="alert">×</span>
+              <i class="fa fa-info fa-2x pull-left"></i>
+                {% else %}
+              <div id="messages" class="alert alert-success fade in">
+              <span class="close" data-dismiss="alert">×</span>
+              <i class="fa fa-check fa-2x pull-left"></i>
+                {% endif %}    
+              <p>{{ message }}</p>
+                </div>
+             {% endfor %}
+          {% endif %}
+          {% if form.errors %}
+              <div id="messages" class="alert alert-danger fade in m-b-15">
+              <span class="close" data-dismiss="alert">×</span>
+              <i class="fa fa-info fa-2x pull-left"></i>
+              {{ form.non_field_errors }}
+              </div>
+          {% endif %}
+      </div>
+    </div>
+    <div id="banner" class="box container">
 		<div class="row">
 			<div class="col-7 col-12-medium">
 				<h2>12,000 Listings.</h2>
@@ -12,7 +38,7 @@
 			</div>
 			<div class="col-5 col-12-medium">
 				<ul>
-					<li><a href="#" class="button large icon solid fa-arrow-circle-right">Search ML</a></li>
+					<li><a href="{% url 'search' %}" class="button large icon solid fa-arrow-circle-right">Search ML</a></li>
 					<li><a href="#" class="button alt large icon solid fa-question-circle">More info</a></li>
 				</ul>
 			</div>
@@ -23,6 +49,7 @@
 <!-- Features -->
 <div id="features-wrapper">
 	<div class="container">
+
 		<div class="row">
 			<div class="col-4 col-12-medium">
 
@@ -83,7 +110,17 @@ in the health sector (for instance - health facilities, people, institutions, sc
 					<div id="content">
 						<section class="last">
 							<h2>On the Map</h2>
-							<div id="map"></div>
+							<div id="map">
+								<iframe
+								  width="100%"
+								  height="450"
+								  style="border:0"
+								  loading="lazy"
+								  allowfullscreen
+								  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDovhIRxlhE-osvbpLKxaOfjUIj75o_QTk
+								    &q=Nairobi">
+								</iframe>
+							</div>
 						</section>
 					</div>
 
