Setup complete and working forms from admin

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,7 +33,7 @@
     <div id="banner" class="box container">
 		<div class="row">
 			<div class="col-7 col-12-medium">
-				<h2>12,000 Listings.</h2>
+				<h2>{{ counts }} Listings.</h2>
 				<p>Master List based on free site template by HTML5 UP</p>
 			</div>
 			<div class="col-5 col-12-medium">
