--- a/templates/search.html
+++ b/templates/search.html
@@ -77,6 +77,7 @@ $(document).ready(function() {
             "url": "/api/v1/search/",
             "data": function ( d ) {
                 d.name = $('#name').val();
+                d.approval_status = $('#approval_status').val();
             }
         },
         "columns": [
